--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,15 @@ html,h1,h2,h3,h4,h5,h6,a{font-family: 'Montserrat', sans-serif;}
     top: 0;
     background: rgba(244, 244, 244, 0.79);
 }
+.overlayAbout{
+    margin-left: 30%;
+    position: absolute;
+    min-height: 100%;
+    min-width: 70%;
+    left: 0;
+    top: 0;
+    background: rgba(244, 244, 244, 0.79);
+}
 .description{
     position: absolute;
     top: 30%;
@@ -56,6 +65,10 @@ html,h1,h2,h3,h4,h5,h6,a{font-family: 'Montserrat', sans-serif;}
     max-width: 250px;
     max-height: 300px;
     border-radius: 50%;
+}
+.about td{
+    border: 1px solid white;
+    padding: 8px 0;
 }
 .about .desc{
     padding: 1em;
